[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/images/White_dot_16x16.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/Laser.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/NotoSans-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.2, 0.223529, 0.278431, 1 )

[sub_resource type="InputEventAction" id=7]
action = "changeType"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=5]
action = "quit"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.223529, 0.278431, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
host_nodepath = NodePath("Connect/PanelContainer/MarginContainer/VBoxContainer/Host")
port_nodepath = NodePath("Connect/PanelContainer/MarginContainer/VBoxContainer/Port")

[node name="Laser" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="Node2D" parent="Laser"]

[node name="Dot" type="Sprite" parent="Laser/Cursor"]
modulate = Color( 1, 0.0784314, 0.0784314, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Dot2" type="Sprite" parent="Laser/Cursor"]
visible = false
modulate = Color( 0.0784314, 0.372549, 1, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Dot4" type="Sprite" parent="Laser/Cursor"]
visible = false
modulate = Color( 1, 0.0784314, 0.0784314, 1 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 7, 7, 2, 2 )

[node name="Node2D" type="Node2D" parent="Laser/Cursor"]
visible = false

[node name="Dot5" type="Sprite" parent="Laser/Cursor/Node2D"]
modulate = Color( 1, 0.0784314, 0.0784314, 1 )
position = Vector2( 0, 7 )
scale = Vector2( 8, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 7, 7, 2, 2 )

[node name="Dot6" type="Sprite" parent="Laser/Cursor/Node2D"]
modulate = Color( 1, 0.0784314, 0.0784314, 1 )
position = Vector2( 7, 0 )
scale = Vector2( 1, 8 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 7, 7, 2, 2 )

[node name="Node2D3" type="Node2D" parent="Laser/Cursor"]
visible = false

[node name="Dot5" type="Sprite" parent="Laser/Cursor/Node2D3"]
modulate = Color( 1, 0.0784314, 0.0784314, 1 )
scale = Vector2( 8, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 7, 7, 2, 2 )

[node name="Dot7" type="Sprite" parent="Laser/Cursor/Node2D3"]
modulate = Color( 1, 0.0784314, 0.0784314, 1 )
position = Vector2( 0, 14 )
scale = Vector2( 8, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 7, 7, 2, 2 )

[node name="Dot6" type="Sprite" parent="Laser/Cursor/Node2D3"]
modulate = Color( 1, 0.0784314, 0.0784314, 1 )
scale = Vector2( 1, 8 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 7, 7, 2, 2 )

[node name="Dot8" type="Sprite" parent="Laser/Cursor/Node2D3"]
modulate = Color( 1, 0.0784314, 0.0784314, 1 )
position = Vector2( 14, 0 )
scale = Vector2( 1, 8 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 7, 7, 2, 2 )

[node name="Node2D2" type="Node2D" parent="Laser/Cursor"]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="Laser"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 3000.0
margin_right = 3016.0
margin_bottom = 14.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeType" type="Button" parent="Laser/HBoxContainer"]
margin_right = 6.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
shortcut = SubResource( 8 )
text = "C"

[node name="Quit" type="Button" parent="Laser/HBoxContainer"]
margin_left = 10.0
margin_right = 16.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
shortcut = SubResource( 6 )
text = "X"

[node name="Timer" type="Timer" parent="Laser"]
wait_time = 10.0

[node name="Connect" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Connect"]
margin_left = 342.0
margin_top = 130.0
margin_right = 682.0
margin_bottom = 470.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Connect/PanelContainer"]
margin_right = 340.0
margin_bottom = 340.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Connect/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 320.0
rect_min_size = Vector2( 300, 300 )

[node name="LabelHost" type="Label" parent="Connect/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 34.0
text = "Host"

[node name="Host" type="LineEdit" parent="Connect/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 300.0
margin_bottom = 72.0
text = "ws://kwars.ml"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPort" type="Label" parent="Connect/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 110.0
text = "Port"

[node name="Port" type="LineEdit" parent="Connect/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 148.0
text = "80"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="HSeparator" parent="Connect/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 300.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = SubResource( 2 )

[node name="isHost" type="Button" parent="Connect/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 228.0
margin_right = 300.0
margin_bottom = 262.0
text = "isHost: True"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="Connect/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 300.0
margin_bottom = 300.0
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Laser/HBoxContainer/ChangeType" to="Laser" method="_on_ChangeType_pressed"]
[connection signal="pressed" from="Laser/HBoxContainer/Quit" to="Laser" method="_on_Quit_pressed"]
[connection signal="timeout" from="Laser/Timer" to="Laser" method="_on_Timer_timeout"]
[connection signal="pressed" from="Connect/PanelContainer/MarginContainer/VBoxContainer/isHost" to="." method="_on_isHost_pressed"]
[connection signal="pressed" from="Connect/PanelContainer/MarginContainer/VBoxContainer/Connect" to="." method="connect_ws"]
